--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Asjad Yousaf Khan - Machine Learning & AI Enthusiast. Portfolio showcasing ML projects, AI solutions, and data science work." />
     <meta name="keywords" content="Machine Learning Portfolio, AI Projects, Data Science, Asjad Yousaf Khan, ML Engineer, Python Developer" />
